--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2873,11 +2873,11 @@
 /* Intro */
 
 	#intro {
-		background: url("images/overlay.png"), url("http://www.davidrumsey.com/rumsey/Size4/D5005/5951004.jpg"),;
-		background-size: 100%;
+		background: url("images/overlay.png"), url("../../images/yellowstonearch.jpg");
+		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
-		
-        background-repeat: no-repeat;
+		background-position: top left, bottom center;
+		background-repeat: repeat, no-repeat;
 	}
 
 /* One */
